--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="js/index.js"></script>
         
 
-        <a href='#' onClick='app.camera_getPicture()'>app.camera_getPicture</a>
+        <a href='#' onClick='app.camera_getPicture()'>TOMAR FOTO</a>
         <img id='myImageCamera'></img>
         <button onclick="captureVideo();">Capture Video</button> <br>
         <script type="text/javascript">
